# Monte-Carolo-cpu-gpu

./: CMakeLists.txt
inc/: MonteCarlo.hpp  mainwindow.h
src/: MonteCarlo.cpp  mainwindow.cpp
ui/: mainwindow.ui
